# TrelloCLI

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.example.md  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
deploy/: Caddyfile  README.md  trellno.env.example  trellno.service
plans/: board-management.md  local-backend-core.md  local-gc.md  phase4-niceties.md  web-column-management.md
tests/: conftest.py  test_conformance.py  test_http_backend.py  test_local_store.py  test_resolvers.py  test_trello_backend.py  test_web_api.py
trello_cli/: __main__.py  api.py  config.py  fmt.py  main.py
trello_cli/backends/: __init__.py  base.py  http.py  local.py  store.py  trello.py
trello_cli/web/: __init__.py  live.py  server.py
trello_cli/web/static/: app.js  index.html  style.css
