[project]
name = "trello-cli"
version = "0.1.0"
description = "A compact Trello CLI that avoids context flooding"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
trello = "trello_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
