[project]
name = "trello-cli"
version = "0.1.0"
description = "A compact Trello CLI that avoids context flooding"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
trello = "trello_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trello_cli*"]

[tool.setuptools.package-data]
"trello_cli.web" = ["static/*", "static/vendor/*"]
